use Long.valueOf instead of new Long()