@@ -177,7 +177,7 @@ public class DB2PlugIn extends JDBCPlugIn {
                   pk = Integer.valueOf(pkObj.intValue());
                 }
                 else {
-                  pk = new Long(pkObj.longValue());
+                  pk = Long.valueOf(pkObj.longValue());
                 }
                 results.addObject(new NSDictionary(pk, attrName));
               }            
